# mbruleminer

./: README.md  mkdocs.yml  pyproject.toml
docs/: about.md
mbruleminer/: __init__.py  miner.py  rule.py  ruleset.py
tests/: test_default.py  test_rule.py  test_ruleset.py
