[project]
name = "mbruleminer"
version = "0.1.0"
description = "Automatically identify binary rules against a target within a dataset"
authors = [
    {name = "Michael Brooks", email = "mjbrooks95@gmail.com"},
]
dependencies = ["pandas>=2.2.3"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "mkdocs>=1.6.1",
    "ipykernel>=6.29.5",
    "pip>=24.3.1",
]
